--- a/css/shouye.css
+++ b/css/shouye.css
@@ -1,1 +1,17 @@
 .fengexian {text-align:center;}
+
+button { 
+        padding:8px;  
+        color: #428bca;  
+        text-align: center; 
+        vertical-align: middle;  
+        font-weight: 900; 
+        font-size:125% 
+      }
+     button{
+        background: gold;
+        border: none;
+        border-radius: 40px 10px; 
+        width: 200px;
+        height: 100px;
+    }
