--- a/css/shouye.css
+++ b/css/shouye.css
@@ -1,7 +1,7 @@
 .fengexian {text-align:center;}
-
 a
 { 
+        text-decoration:none;
         padding:8px;  
         color: #428bca;  
         text-align: center; 
@@ -11,7 +11,7 @@ a
       }
      a
      {
-        background: gold;
+        background: blue;
         border: none;
         border-radius: 40px 10px; 
         width: 200px;
